<resources>
    <string name="app_name">RobustaWeather</string>
    <string name="dialog_title">Message</string>
    <string name="perm_request_try_again">Please allow the permission from settings and try again</string>
    <string name="perm_settings">Settings</string>
    <string name="progress_dialog_loading_msg">Loading…</string>
    <string name="there_is_no_data">There is no data</string>
    <string name="take_photo">Take Photo</string>
    <string name="temp_label">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="condition">Condition:</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="add_place">Add Place</string>
    <string name="general_error">Smothing went wrong !</string>
    <string name="network_not_available">Newtwork is unavailable</string>
    <string name="please_fill_missing_data">Please fill missing data</string>
</resources>